tests/paczka1/fuzzy1/17876338.err
Error in line 13: Za0a S983 41,6
Error in line 23: N1emNREw5S S983 5,6
Error in line 17: FywMJ S983 63,8
